--- a/index.html
+++ b/index.html
@@ -1550,7 +1550,7 @@ Mablark se redresse, les bras levés :
 — « J’ai vaincu la Matrice ! Libre circulation des données pour tous ! »
 Mais soudain, Morbagh le Barbu réapparaît…
 — « Bravo, Mablark. Mais sache… qu’il reste les extensions Chrome. »
-
+&lt;img src=&quot;img/kubernepee.png&quot;&gt;
 Linus Torvaldson s’approche alors de notre héros et déclame d’un air solennel:
 -” tu as fait preuve de bravoure Mablark. Je te fais chevalier de l’ordre du libre et te remet Kubernépée, la lame sacrée de la communauté du Libre. Va! De nombreux combats t’attendent!”
 
