--- a/index.html
+++ b/index.html
@@ -912,7 +912,7 @@ Ainsi débuta la quête insensée de Mablark le Glabre : accomplir un fait de gu
 &lt;&lt;nextDay&gt;&gt;
 Un matin blafard, alors que le vent des steppes fouette les yourtes et agite les colliers d’os ornant le campement, Mablark se lève, le regard embrumé mais empli d’une lueur de détermination. Son gourdinet bringuebale à sa ceinture, trop léger pour faire peur, mais assez lourd pour lui cogner les burnes à chaque pas.
 &lt;&lt;/nobr&gt;&gt;
-&lt;img src=&quot;img/depart.jpeg&quot;&gt;
+&lt;img src=&quot;img/depart.jpeg&quot; style=&quot;max-width=500;&quot;&gt;
 Devant lui s’étend la vaste plaine, avec ses collines chauves et ses forêts lugubres où rôdent les échos des tambours du chaos. La tribu, rassemblée pour le voir partir, ricane à demi-mots : certains parient qu’il reviendra avant la nuit, d’autres qu’il se perdra avant même d’avoir franchi la rivière.
 &lt;&lt;nobr&gt;&gt;
     &lt;div class=&quot;choices&quot;&gt;
@@ -1090,7 +1090,7 @@ Après un long périple héroïque, bravant les éléments dans les monts de Ski
 &lt;&lt;/nobr&gt;&gt;
 Confiant, presque trop, Mablark entreprend la dernière épreuve : le garer devant sa demeure pour décharger l’arsenal de voyage de sa compagne et ses deux filles, les prises de leur dernière chasse et les 5 kg de fromage de Montagne qui l’avaient fait saliver durant tout le voyage.
 Mais dans l’ombre, une malédiction rôde encore… un sortilège perfide connu sous le nom de Manœuvre de Fin de Quête.
-&lt;img src=&quot;img/chariot.png&quot;&gt;
+&lt;img src=&quot;img/chariot2.png&quot;&gt;
 À peine a-t-il tourné le gouvernail de direction que l’acier géant grince, ploie, racle contre les murailles invisibles de la destinée. Quand le silence retombe, il reste une cicatrice monumentale sur la carrosserie sacrée.
 
 Le chariot est brisé… et la guilde des Loueurs Usuriers réclame 25 pièces d’or en réparation. Une somme capable d’acheter une hache à deux mains +2 ou un séjour no limit au Hellfest.
